# pyd-sqa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: issue-manager.yml  publish.yml  test.yml
pyd_sqa/: __init__.py  main.py
scripts/: format-imports.sh  format.sh  lint.sh  publish.sh  test.sh
tests/: test_pyd_sqa.py
