[tool.poetry]
name = "pyd-sqa"
version = "1.0.0"
description = "Tools to convert SQLAlchemy models to Pydantic models, forked from tiangolo/pydantic-sqlalchemy"
authors = ["Sebastian López <selobu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.3"

# Local development dependencies
jupyter = {version = "^1.0.0", optional = true, extras = ["dev"]}
autoflake = {version = "^1.3.1", optional = true, extras = ["dev"]}
flake8 = {version = "^3.7.9", optional = true, extras = ["dev"]}
sqlalchemy = "2.0.0"


[tool.poetry.extras]

dev = ["autoflake", "flake8", "jupyter"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"
